--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 item;
             alert(response.query.results);
             for (var i = 0, k = response.query.results.feed.entry.length; i < k; i++) {
-                alert(i);
+               // alert(i);
                 item = response.query.results.feed.entry[i];
                 text += '<li><a href="' + item.link.href + '">' + item.title + '</a></li>';
             }
