removed final alert

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         function handleResponse(response) {
             var text = '',
                 item;
-            alert(response.query.results);
+            //alert(response.query.results);
             for (var i = 0, k = response.query.results.feed.entry.length; i < k; i++) {
                // alert(i);
                 item = response.query.results.feed.entry[i];
